# alg

./: README_smart_test.md  decision_tree_simple_example.py  main.py  pyproject.toml  test.py
.cursor/rules/: leetcode.mdc
docs/: README.md  decision_tree.md  kmeans_clustering.md  linear_regression.md  logistic_regression_derivation.md  numerical_computing.md  principal_component_analysis.md  simple_logistic_regression.py  simple_train.py  support_vector_machine.md
docs/learn/: README.md  cnn.md  rnn.md  transformer.md
docs/linear_algebra/: README.md  eigenvalues_eigenvectors.md  matrix_basics.md  matrix_operations.md
docs/numpy/: README.md  linear_algebra_formulas.md  numpy_basics.md  probability_formulas.md
docs/opt/: README.md  adam_optimizer.md  newton_method.md  stochastic_gradient_descent.md
docs/prob/: README.md  basic_formulas.md  least_squares.md  poisson_distribution.md
leetcode/hot100/: dfs_basic.py  h1.py  h10.py  h101.py  h102.py  h104.py  h105.py  h11.py  h114.py  h121.py  h124.py  h128.py  h136.py  h139.py  h141.py  h142.py  h146.py  h148.py  h15.py  h152.py  h155.py  h160.py  h17.py  h19.py  h198.py  h2.py  h20.py  h200.py  h206.py  h207.py  h208.py  h215.py  h22.py  h221.py  h226.py  h23.py  h234.py  h236.py  h238.py  h239.py  (+59 more)
leetcode/hot200/: README.md
leetcode/rand5/: h15.py  h206.py  h53.py  h78.py
niuke/: 250903.1.py  hj16.py  hj18.py  hj21.py  hj23.py  hj24.py  hj27.py  hj34.py  hj5.py  hj6.py  hj8.py  test_moe_topk.py
niuke/ai/: la14.py  la16.py  la17.py  la19.py  la22.py  la9.py
niuke/common/: lb1.py  lb2.py  lb3.py  lb4.py  (+5 more)
(+332 files in other folders)
